--- a/index.html
+++ b/index.html
@@ -8,7 +8,31 @@
 </head>
 <body>
     
+    <header>
 
-    
+        <nav>
+            <h3 class="logo">G3 Architects</h3>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="#login">Login</a></li>
+            </ul>
+        </nav>
+
+
+    </header>
+
+
+
+    <main>
+
+    </main>
+
+
+    <footer>
+
+    </footer>
+
 </body>
 </html>
