--- a/index.html
+++ b/index.html
@@ -20,12 +20,40 @@
             </ul>
         </nav>
 
+        <div class="banner">
+            <div class="banner-info">
+                <h1>Brand New <br>Group of Architects</h1>
+                <p>Our website, archdigest.com, offers constant original coverage of the interior design <br> and architecture worlds, new shops and products, travel destinations</p>
+              <button class="button">Explore More</button>
+            </div>
+            <div class="banner-img">
+                <img src="./assets/img/images/banner.png" alt="">
+            </div>
+        </div>
+
 
     </header>
 
 
 
     <main>
+
+        <section class="team-container">
+            <div class="team-img-container">
+                <img src="./assets/img/images/team1.png" alt="">
+                <img src="./assets/img/images/team2.png" alt="">
+                <img src="./assets/img/images/team3.png" alt="">
+                <img src="./assets/img/images/team4.png" alt="">
+            </div>
+
+            <div class="team-content">
+                <h1>Quick list of our <br><span>Features</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dignissimos quam voluptatum laborum atque porro!</p>
+                <button class="button">Explore More</button>
+            </div>
+
+        </section>
+
 
     </main>
 
