--- a/index.html
+++ b/index.html
@@ -55,6 +55,40 @@
         </section>
 
 
+        <section class="features">
+
+        </section>
+
+        <section class="facts">
+            <h1>Some Fact</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam possimus vitae minus? Voluptatem, <br>dolorum. Soluta eum nisi enim et in?</p>
+
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="./assets/img/images/icons/ribon.png" alt="">
+                    <h2 class="card-stats">54</h2>
+                    <p class="card-title">Award Winning</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/images/icons/projects.png" alt="">
+                    <h2 class="card-stats">1458</h2>
+                    <p class="card-title">Project Finish</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/images/icons/customers.png" alt="">
+                    <h2 class="card-stats">514</h2>
+                    <p class="card-title">Clients Work</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/images/icons/email.png" alt="">
+                    <h2 class="card-stats">20267</h2>
+                    <p class="card-title">Email Sent</p>
+                </div>
+            </div>
+
+        </section>
+
+
     </main>
 
 
