--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
 
         </section>
 
+        <section class="sponsor">
+            <h1>Our Sponsor</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque minima iure necessitatibus ipsa inventore quis? Eum at corporis delectus? Commodi.</p>
+
+            <div class="sponsor-img">
+                <img src="./assets/img/images/sponsors/spotify.png" alt="">
+                <img src="./assets/img/images/sponsors/amazon.png" alt="">
+                <img src="./assets/img/images/sponsors/google.png" alt="">
+                <img src="./assets/img/images/sponsors/telerama.png" alt="">
+                <img src="./assets/img/images/sponsors/figma.png" alt="">
+            </div>
+
+        </section>
 
     </main>
 
