--- a/index.html
+++ b/index.html
@@ -56,7 +56,33 @@
 
 
         <section class="features">
-
+            <div class="features-content">
+                <h2 class="f-left">Featues you will <br> love & enjoy</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque necessitatibus cum, modi eum explicabo rerum ex eaque nobis vitae est!</p>
+                <div class="card">
+                    <h3>Desktop And Mobile version</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore accusantium nostrum ad quod dolor aperiam vel necessitatibus ullam.</p>
+                </div>
+                <div class="card">
+                    <h3>Desktop And Mobile version</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore accusantium nostrum ad quod dolor aperiam vel necessitatibus ullam.</p>
+                </div>
+                <div class="card">
+                    <h3>Desktop And Mobile version</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore accusantium nostrum ad quod dolor aperiam vel necessitatibus ullam.</p>
+                </div>
+                <div class="card">
+                    <h3>Desktop And Mobile version</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore accusantium nostrum ad quod dolor aperiam vel necessitatibus ullam.</p>
+                </div>
+            </div>
+            <div class="features-img">
+                <img src="./assets/img/images/architect.png" alt="">
+                <div class="ten-years-badge">
+                    <h1>10+Year</h1>
+                    <p>Experience</p>
+                </div>
+            </div>
         </section>
 
         <section class="facts">
@@ -106,7 +132,8 @@
 
 
     <footer>
-
+        <h1>All rights reserved copyright@2023 startup landing page design</h1>
+        
     </footer>
 
 </body>
